--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "asynckit": "^0.4.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "combined-stream": "^1.0.8",
     "delayed-stream": "^1.0.0",
     "discord.js": "^14.11.0",
@@ -30,7 +32,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
